[metadata]
name = robopanda
version = 0.0.2
url = https://github.com/sammaule/robopanda
author = Sam Maule
author_email = "Sam Maule" <sam.maule@gmail.com>
description = This package provides helper functions for typical pandas workflows.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*
######################
# Tool configuration #
######################

[mypy]
ignore_missing_imports = True
python_version = 3.9
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = test
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = src/robopanda
branch = True

[coverage:report]
show_missing = True

[coverage:paths]
source =
    src/robopanda
    */site-packages/robopanda

[tox:tox]
envlist = py39, py310, py311
isolated_build = True

[testenv]
deps =
    pandas
    pytest
    pytest-cov
commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
    pytest
    types-termcolor
commands =
    mypy {posargs:src test}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src test}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src test}
